changing the dump to be a little more memory friendly